Added Test Ajax Call

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<a href="#search" onclick="makeSearch()" class="mdl-tabs__tab is-active">SearchAROO</a>
+<a href="#search" onclick="makeSearch()" class="mdl-tabs__tab is-active">Search</a>
 <a href="#favorites" onclick="makeFavorites()" class="mdl-tabs__tab">Favorites</a>
 <a href="#wishList" onclick="makeWishlist()" class="mdl-tabs__tab">Wish List</a>
 <a href="#inventory" onclick="makeInventoy()" class="mdl-tabs__tab">Inventory</a>
