--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -41,5 +41,6 @@
     </div>
 </body>
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="../../JS/business.js"></script>
 </html>
