Added elements to page.
Added all of the stuff that we are going to need. Need to make everything look good then use the EJS variables to fill them

--- a/views/partials/custom.ejs
+++ b/views/partials/custom.ejs
@@ -1,1 +1,47 @@
 <h1>CUSTOM</h1>
+<div class="mdl-grid" id="product Form">
+            <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+            <div class=" mdl-card mdl-cell mdl-cell--8-col mdl-shadow--2dp">
+                <form action="admin.php" method="post" enctype="multipart/form-data">
+                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label pad-left is-upgraded" data-upgraded=",MaterialTextfield">
+                        <input class="mdl-textfield__input" type="text" name="nameText" id="nameText" "="">
+                        <label class="mdl-textfield__label darker pad-left" for="nameText">Name</label>
+                    </div>
+                    <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label pad-left is-upgraded" data-upgraded=",MaterialTextfield">
+            <input class="mdl-textfield__input" type="text" name="quantityTxt" id="quantityTxt" "="">
+            <label class="mdl-textfield__label darker pad-left" for="quantityTxt">Quantity Available</label>
+        </div>
+        <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label pad-left is-upgraded" data-upgraded=",MaterialTextfield">
+            <input class="mdl-textfield__input" type="text" name="priceTxt" id="priceTxt" "="">
+            <label class="mdl-textfield__label darker pad-left" for="priceTxt">Price</label>
+        </div>
+        <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label pad-left is-upgraded" data-upgraded=",MaterialTextfield">
+            <input class="mdl-textfield__input" type="text" name="saleTxt" id="saleTxt" "="">
+            <label class="mdl-textfield__label darker pad-left" for="saleTxt">Sale Price</label>
+        </div>
+        <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label pad-left is-upgraded" data-upgraded=",MaterialTextfield">
+            <textarea class="mdl-textfield__input" type="text" rows="4" maxlength="140" name="descTxt" id="descTxt"></textarea>
+            <label class="mdl-textfield__label darker pad-left" for="descTxt">Product Description</label>
+        </div>
+        <br>        <div class="pad-left">
+            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect mdl-js-ripple-effect--ignore-events is-upgraded" for="saleCheck" data-upgraded=",MaterialCheckbox,MaterialRipple">
+               <input type="checkbox" id="saleCheck" name="saleCheck" class="mdl-checkbox__input">
+               <span class="mdl-checkbox__label">On Sale</span>
+            <span class="mdl-checkbox__focus-helper"></span><span class="mdl-checkbox__box-outline"><span class="mdl-checkbox__tick-outline"></span></span><span class="mdl-checkbox__ripple-container mdl-js-ripple-effect mdl-ripple--center" data-upgraded=",MaterialRipple"><span class="mdl-ripple"></span></span></label>
+        </div>
+        <br>
+        <div class="pad-left">
+            <input type="file" id="file" name="fileSelector">
+            <label for="file" class="mdl-button mdl-js-button mdl-button--fab " data-upgraded=",MaterialButton">
+              <i class="material-icons mdl-color-text--blue-500">add_a_photo</i>
+            </label>
+        </div>
+        <br>
+        <div class="pad-left">
+                <button name="submitButton" type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" data-upgraded=",MaterialButton,MaterialRipple">Submit<span class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span></button>
+                <button name="resetButton" type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" data-upgraded=",MaterialButton,MaterialRipple">Reset<span class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span></button>
+        </div>
+        <br>
+        </form>
+        </div>
+        </div>>
