--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,1 +1,27 @@
-<h1>SEARCH STUFF</h1>
+<h1>Search</h1>
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+  <!-- Image Card-->
+  <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
+          <img src="imgs/Marcy.jpg" height="100%" width="100%" border="0" alt="" class="hoverZoomLink">
+  </div>
+  <!-- Info Card-->
+  <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--2dp">
+      <div class="mdl-card__title no-bottom-padding">
+          <h1 class="mdl-card__title-text md-2em">Wine Name</h1>
+          <div class="mdl-layout-spacer"></div>
+          <img src="imgs/sale_icon.png" alt="">
+      </div>
+      <div class="mdl-card__supporting-text no-top-padding">
+          <h4 class="mdl-card__title-text">Something else about the wine</h4>
+      </div>
+  </div>
+  <!-- Price and Cart Card-->
+  <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
+      <div class="mdl-card__actions">
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Add to Wish List   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Add to inventory   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
+      </div>
+  </div>
+</div>
