added icons to wishlist, favorites, inventory
added info and delete icons to all mentioned

--- a/views/partials/favorites.ejs
+++ b/views/partials/favorites.ejs
@@ -20,8 +20,8 @@
   <!-- Price and Cart Card-->
   <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
       <div class="mdl-card__actions">
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Remove   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Remove   <i class="material-icons mdl-color-text--green-800">delete</i></button>
       </div>
   </div>
 </div>
