--- a/views/partials/inventory.ejs
+++ b/views/partials/inventory.ejs
@@ -21,8 +21,8 @@
   <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
       <div class="mdl-card__actions">
           <h2>Quantity: </h2>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Remove   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Remove   <i class="material-icons mdl-color-text--green-800">delete</i></button>
       </div>
   </div>
 </div>
