--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,4 +1,13 @@
-<h1>Search</h1>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+        <div class="mdl-cell mdl-cell--2-col is-dirty">
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input type="search" onsearch="searchForDocs()" id="searchBar" class="mdl-textfield__input darker"
+                   type="text">
+            <label class="mdl-textfield__label darker" for="searchBar">Begin your search here. . .</label>
+        </div>
+    </div>
+</div>
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
   <!-- Image Card-->
@@ -19,7 +28,7 @@
   <!-- Price and Cart Card-->
   <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
       <div class="mdl-card__actions">
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
           <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Add to Wish List   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
           <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Add to inventory   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
       </div>
