deleted backend_wine began to add some logic for searching the API

--- a/search.ejs
+++ b/search.ejs
@@ -2,7 +2,7 @@
     <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
         <div class="mdl-cell mdl-cell--2-col is-dirty">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="search" onsearch="searchForDocs()" id="searchBar" class="mdl-textfield__input darker"
+            <input type="search" onsearch="search(this)" id="searchBar" class="mdl-textfield__input darker"
                    type="text">
             <label class="mdl-textfield__label darker" for="searchBar">Begin your search here. . .</label>
         </div>
