--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -28,9 +28,10 @@
   <!-- Price and Cart Card-->
   <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
       <div class="mdl-card__actions">
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Add to Wish List   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Add to inventory   <i class="material-icons mdl-color-text--green-800">add_shopping_cart</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">Add to Wish List   <i class="material-icons mdl-color-text--green-800">card_giftcard</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">Add to inventory   <i class="material-icons mdl-color-text--green-800">playlist_add</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">Add to favorites   <i class="material-icons mdl-color-text--green-800">stars</i></button>
       </div>
   </div>
 </div>
