added some test info

--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -12,17 +12,20 @@
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
   <!-- Image Card-->
   <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
-          <img src="imgs/Marcy.jpg" height="100%" width="100%" border="0" alt="" class="hoverZoomLink">
+          <img src="imgs/red_cat.jpeg" height="100%" width="100%" border="0" alt="" class="hoverZoomLink">
   </div>
   <!-- Info Card-->
   <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--2dp">
       <div class="mdl-card__title no-bottom-padding">
-          <h1 class="mdl-card__title-text md-2em">Wine Name</h1>
+          <h1 class="mdl-card__title-text md-2em">Red Cat</h1>
           <div class="mdl-layout-spacer"></div>
           <img src="imgs/sale_icon.png" alt="">
       </div>
       <div class="mdl-card__supporting-text no-top-padding">
-          <h4 class="mdl-card__title-text">Something else about the wine</h4>
+          <h4 class="mdl-card__title-text"></h4>
+         <p>Tasting Notes: Red Cat opens with a sweet sangria-style taste and finishes with a tangy mouth-watering bite.</p>
+         <p>Food Pairings: Perfect with burgers, wings, pizza and nachos.</p>
+         <p>Drink Suggestions: Pour Red Cat over ice.  Add a squeeze of lime and a tiny umbrella. Wear flip-flops, relax and enjoy your Red Cat on the Beach.</p>
       </div>
   </div>
   <!-- Price and Cart Card-->
