Slight UI Changes

--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -19,13 +19,12 @@
       <div class="mdl-card__title no-bottom-padding">
           <h1 class="mdl-card__title-text md-2em">Red Cat</h1>
           <div class="mdl-layout-spacer"></div>
-          <img src="imgs/sale_icon.png" alt="">
       </div>
       <div class="mdl-card__supporting-text no-top-padding">
           <h4 class="mdl-card__title-text"></h4>
-         <p>Tasting Notes: Red Cat opens with a sweet sangria-style taste and finishes with a tangy mouth-watering bite.</p>
-         <p>Food Pairings: Perfect with burgers, wings, pizza and nachos.</p>
-         <p>Drink Suggestions: Pour Red Cat over ice.  Add a squeeze of lime and a tiny umbrella. Wear flip-flops, relax and enjoy your Red Cat on the Beach.</p>
+         <p><b>Tasting Notes</b>: Red Cat opens with a sweet sangria-style taste and finishes with a tangy mouth-watering bite.</p>
+         <p><b>Food Pairings</b>: Perfect with burgers, wings, pizza and nachos.</p>
+         <p><b>Drink Suggestions</b>: Pour Red Cat over ice.  Add a squeeze of lime and a tiny umbrella. Wear flip-flops, relax and enjoy your Red Cat on the Beach.</p>
       </div>
   </div>
   <!-- Price and Cart Card-->
@@ -39,16 +38,19 @@
   </div>
 </div>
 
-<dialog class="mdl-dialog">
-  <h4 class="mdl-dialog__title">Allow data collection?</h4>
-  <div class="mdl-dialog__content">
-      <p>Region: USA -> New York -> Finger Lakes</p>
-      <p>Winery: Hazlitt 1852 Vineyards</p>
-      <p>Blend: Catawba, Baco Noir</p>
-      <p>Price: $7.99</p>
+<dialog class="mdl-dialog" style="width: 500px">
+  <h4 class="mdl-dialog__title" style="color: red">Red Cat</h4>
+  <div class="mdl-dialog__content" style="padding-top: 0px">
+      <h4 style="text-decoration: underline">Region</h4>
+      <h5>USA -> New York -> Finger Lakes</h5>
+      <h4 style="text-decoration: underline">Winery</h4>
+      <h5>Hazlitt 1852 Vineyards</h5>
+      <h4 style="text-decoration: underline">Blend</h4>
+      <h5>Catawba, Baco Noir</h5>
+      <h4 style="text-decoration: underline">Price</h4>
+      <h5>$7.99</h5>
   </div>
   <div class="mdl-dialog__actions">
-    <button type="button" class="mdl-button">Agree</button>
-    <button type="button" class="mdl-button close">Disagree</button>
+    <button type="button" class="mdl-button">Okay</button>
   </div>
 </dialog>
