--- a/views/partials/favorites.ejs
+++ b/views/partials/favorites.ejs
@@ -1,26 +1,30 @@
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
   <!-- Image Card-->
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
-      <p>wine pic</p>
-          <img src="imgs/Marcy.jpg" height="100%" width="100%" border="0" alt="" class="hoverZoomLink">
+  <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--8dp">
+          <img src="imgs/white_cat.jpg" height="100%" width="100%" border="0" alt="" class="hoverZoomLink">
   </div>
   <!-- Info Card-->
-  <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--2dp">
+  <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--8dp">
       <div class="mdl-card__title no-bottom-padding">
-          <h1 class="mdl-card__title-text md-2em">Wine Name</h1>
+          <h1 class="mdl-card__title-text md-2em">White Cat</h1>
           <div class="mdl-layout-spacer"></div>
-          <img src="imgs/sale_icon.png" alt="">
       </div>
       <div class="mdl-card__supporting-text no-top-padding">
-          <h4 class="mdl-card__title-text">Something else about the wine</h4>
+          <h4 class="mdl-card__title-text"></h4>
+         <p><b>Tasting Notes</b>: The flavor of freshly-squeezed Niagara grape juice. Sweet, refreshing and mouth-watering!</p>
+         <p><b>Food Pairings</b>: White Cat pairs exceptionally well with chips, dips, fresh fruit and crepes.</p>
+         <p><b>Drink Suggestions</b>: Pour White Cat over ice.  Add a squeeze of orange and a tiny umbrella.  Wear flip-flops, relax and enjoy your White Cat on the Beach.</p>
       </div>
   </div>
   <!-- Price and Cart Card-->
   <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
       <div class="mdl-card__actions">
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Remove   <i class="material-icons mdl-color-text--green-800">delete</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">Add to Wish List   <i class="material-icons mdl-color-text--green-800">card_giftcard</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">Add to inventory   <i class="material-icons mdl-color-text--green-800">playlist_add</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">Remove Favorite  <i class="material-icons mdl-color-text--green-800">delete</i></button>
+
       </div>
   </div>
 </div>
