--- a/views/partials/wishlist.ejs
+++ b/views/partials/wishlist.ejs
@@ -1,25 +1,26 @@
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
   <!-- Image Card-->
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
-      <p>wine pic</p>
-          <img src="imgs/Marcy.jpg" height="100%" width="100%" border="0" alt="" class="hoverZoomLink">
+  <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--8dp">
+          <img src="imgs/brambleberry.jpg" height="100%" width="100%" border="0" alt="" class="hoverZoomLink">
   </div>
   <!-- Info Card-->
-  <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--2dp">
+  <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--8dp">
       <div class="mdl-card__title no-bottom-padding">
-          <h1 class="mdl-card__title-text md-2em">Wine Name</h1>
+          <h1 class="mdl-card__title-text md-2em">Brambleberry</h1>
           <div class="mdl-layout-spacer"></div>
-          <img src="imgs/sale_icon.png" alt="">
       </div>
       <div class="mdl-card__supporting-text no-top-padding">
-          <h4 class="mdl-card__title-text">Something else about the wine</h4>
+          <h4 class="mdl-card__title-text"></h4>
+          <p><b>Winemaker Notes</b>: A “berry-licious” sensation! Lush Catawba grapes are infused with natural red and black raspberries to create a refreshing wine that’s fun to drink!</p>
+         <p><b>Tasting Notes</b>: Lush black and red raspberry flavor.</p>
+         <p><b>Food Pairings</b>: Serve Bramble Berry chilled or pour over ice with club soda for a fun wine spritzer. A perfect companion with chocolate! For a real treat, bake a batch of Bramble Berry Brownies. Simply substitute Bramble Berry wine for the usual water quantity in your fudge brownie mix. Yummy!</p>
       </div>
   </div>
   <!-- Price and Cart Card-->
   <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
       <div class="mdl-card__actions">
-          <h2>Quantity: </h2>
+          <h4>Quantity: 1</h4>
           <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
           <button name="AddProd" type="submit" class="mdl-button mdl-js-button " data-upgraded=",MaterialButton">Remove   <i class="material-icons mdl-color-text--green-800">delete</i></button>
       </div>
