--- a/views/partials/custom.ejs
+++ b/views/partials/custom.ejs
@@ -7,6 +7,11 @@
                    type="text">
             <label class="mdl-textfield__label darker" for="searchBar">Name</label>
         </div>
+        <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+<input type="search" onsearch="searchForDocs()" id="searchBar" class="mdl-textfield__input darker"
+       type="text">
+<label class="mdl-textfield__label darker" for="searchBar">Vintage</label>
+</div>
                     <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <input type="search" onsearch="searchForDocs()" id="searchBar" class="mdl-textfield__input darker"
                    type="text">
@@ -27,8 +32,12 @@
                    type="text">
             <label class="mdl-textfield__label darker" for="searchBar">Price</label>
         </div>
-
         <br>
+        <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+<input type="search" onsearch="searchForDocs()" id="searchBar" class="mdl-textfield__input darker"
+       type="text">
+<label class="mdl-textfield__label darker" for="searchBar">Other Information</label>
+</div>
         <div class="pad-left">
             <input type="file" id="file" name="fileSelector">
             <label for="file" class="mdl-button mdl-js-button mdl-button--fab " data-upgraded=",MaterialButton">
