ripped out some hardcoded data, added close functionality to the more info modal

--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -22,9 +22,6 @@
       </div>
       <div class="mdl-card__supporting-text no-top-padding">
           <h4 class="mdl-card__title-text"></h4>
-         <p><b>Tasting Notes</b>: Red Cat opens with a sweet sangria-style taste and finishes with a tangy mouth-watering bite.</p>
-         <p><b>Food Pairings</b>: Perfect with burgers, wings, pizza and nachos.</p>
-         <p><b>Drink Suggestions</b>: Pour Red Cat over ice.  Add a squeeze of lime and a tiny umbrella. Wear flip-flops, relax and enjoy your Red Cat on the Beach.</p>
       </div>
   </div>
   <!-- Price and Cart Card-->
@@ -38,19 +35,11 @@
   </div>
 </div>
 
-<dialog class="mdl-dialog" style="width: 500px">
+<dialog class="mdl-dialog" style="width: 500px" id="modal">
   <h4 class="mdl-dialog__title" style="color: red">Red Cat</h4>
   <div class="mdl-dialog__content" style="padding-top: 0px">
-      <h4 style="text-decoration: underline">Region</h4>
-      <h5>USA -> New York -> Finger Lakes</h5>
-      <h4 style="text-decoration: underline">Winery</h4>
-      <h5>Hazlitt 1852 Vineyards</h5>
-      <h4 style="text-decoration: underline">Blend</h4>
-      <h5>Catawba, Baco Noir</h5>
-      <h4 style="text-decoration: underline">Price</h4>
-      <h5>$7.99</h5>
   </div>
   <div class="mdl-dialog__actions">
-    <button type="button" class="mdl-button">Okay</button>
+    <button type="button" onclick="closeModal()" class="mdl-button">Close</button>
   </div>
 </dialog>
