Functionality for all more info buttons

--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -33,7 +33,7 @@
   </div>
 </div>
 
-<dialog class="mdl-dialog" style="width: 500px" id="modal">
+<dialog class="mdl-dialog" style="width: 500px">
   <div class="mdl-dialog__content" style="padding-top: 0px">
   </div>
   <div class="mdl-dialog__actions">
