--- a/views/partials/favorites.ejs
+++ b/views/partials/favorites.ejs
@@ -15,10 +15,18 @@
   <!-- Price and Cart Card-->
   <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
       <div class="mdl-card__actions">
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">Add to Wish List   <i class="material-icons mdl-color-text--green-800">card_giftcard</i></button>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">Add to inventory   <i class="material-icons mdl-color-text--green-800">playlist_add</i></button>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button ">Remove Favorite  <i class="material-icons mdl-color-text--green-800">delete</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button" onclick="openModal()">More Info<i class="material-icons mdl-color-text--green-800">info</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button">Add to Wish List<i class="material-icons mdl-color-text--green-800">card_giftcard</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button">Add to inventory<i class="material-icons mdl-color-text--green-800">playlist_add</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button">Remove Favorite<i class="material-icons mdl-color-text--green-800">delete</i></button>
       </div>
   </div>
 </div>
+
+<dialog class="mdl-dialog" style="width: 500px">
+  <div class="mdl-dialog__content" style="padding-top: 0px">
+  </div>
+  <div class="mdl-dialog__actions">
+    <button type="button" onclick="closeModal()" class="mdl-button">Close</button>
+  </div>
+</dialog>
