--- a/views/partials/inventory.ejs
+++ b/views/partials/inventory.ejs
@@ -16,7 +16,7 @@
   <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
       <div class="mdl-card__actions">
           <h4>Quantity: </h4>
-          <button name="AddProd" type="submit" class="mdl-button mdl-js-button" onclick="openModal(this)" data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
+          <button name="AddProd" type="submit" class="mdl-button mdl-js-button" onclick="openModal()" data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
           <button name="AddProd" type="submit" class="mdl-button mdl-js-button" data-upgraded=",MaterialButton">Remove   <i class="material-icons mdl-color-text--green-800">delete</i></button>
       </div>
   </div>
