--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,34 +1,41 @@
-<div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-        <div class="mdl-cell mdl-cell--2-col is-dirty">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="search" onsearch="search(this)" id="searchBar" class="mdl-textfield__input darker"
-                   type="text">
-            <label class="mdl-textfield__label darker" for="searchBar">Begin your search here. . .</label>
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+            <div class="mdl-cell mdl-cell--2-col is-dirty">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input type="search" onsearch="search(this)" id="searchBar" class="mdl-textfield__input darker"
+                       type="text">
+                <label class="mdl-textfield__label darker" for="searchBar">Begin your search here. . .</label>
+            </div>
         </div>
     </div>
-</div>
-<div class="mdl-grid">
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <!-- Image Card-->
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--8dp">
-  </div>
-  <!-- Info Card-->
-  <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--8dp">
-      <div class="mdl-card__title no-bottom-padding">
-          <div class="mdl-layout-spacer"></div>
-      </div>
-      <div class="mdl-card__supporting-text no-top-padding">
-          <h4 class="mdl-card__title-text"></h4>
-      </div>
-  </div>
-  <!-- Price and Cart Card-->
-  <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--8dp">
-      <div class="mdl-card__actions">
-          <button name="wineApiCode" type="submit" onclick="openModal(this.name)" class="mdl-button mdl-js-button ">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
-          <button name="wineApiCode" type="submit" onclick="addToList(this.name, 'wish')" class="mdl-button mdl-js-button ">Add to Wish List   <i class="material-icons mdl-color-text--green-800">card_giftcard</i></button>
-          <button name="wineApiCode" type="submit" onclick="addToList(this.name, 'inventory')" class="mdl-button mdl-js-button ">Add to inventory   <i class="material-icons mdl-color-text--green-800">playlist_add</i></button>
-          <button name="wineApiCode" type="submit" class="mdl-button mdl-js-button ">Add to favorites   <i class="material-icons mdl-color-text--green-800">stars</i></button>
-      </div>
-  </div>
-</div>
+
+    <% if(!locals.wines){ %>
+        <h1>Search for a wine</h1>
+    <% } else{ %>
+     <% for(var i=0; i < wines.length; i++) { %>
+         <div class="mdl-grid">
+           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+           <!-- Image Card-->
+           <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--8dp">
+           </div>
+           <!-- Info Card-->
+           <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--8dp">
+               <div class="mdl-card__title no-bottom-padding">
+                   <div class="mdl-layout-spacer"></div>
+               </div>
+               <div class="mdl-card__supporting-text no-top-padding">
+                   <h4 class="mdl-card__title-text"></h4>
+               </div>
+           </div>
+           <!-- Price and Cart Card-->
+           <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--8dp">
+               <div class="mdl-card__actions">
+                   <button name='<%- wines[i].code %>' type="submit" onclick="openModal(this.name)" class="mdl-button mdl-js-button ">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
+                   <button name="<%- wines[i].code %>" type="submit" onclick="addToList(this.name, 'wish')" class="mdl-button mdl-js-button ">Add to Wish List   <i class="material-icons mdl-color-text--green-800">card_giftcard</i></button>
+                   <button name="<%- wines[i].code %>" type="submit" onclick="addToList(this.name, 'inventory')" class="mdl-button mdl-js-button ">Add to inventory   <i class="material-icons mdl-color-text--green-800">playlist_add</i></button>
+                   <button name="<%- wines[i].code %>" type="submit" class="mdl-button mdl-js-button ">Add to favorites   <i class="material-icons mdl-color-text--green-800">stars</i></button>
+               </div>
+           </div>
+         </div>
+     <% } %>
+<% } %>
