--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -17,14 +17,17 @@
            <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
            <!-- Image Card-->
            <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--8dp">
+               <img src='<%- wines[i].image %>'  height="100%" width="100%" border="0" alt="">
            </div>
            <!-- Info Card-->
            <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--8dp">
                <div class="mdl-card__title no-bottom-padding">
+                   <h2 class="mdl-card__title-text"><%- wines[i].name %></h2>
                    <div class="mdl-layout-spacer"></div>
                </div>
                <div class="mdl-card__supporting-text no-top-padding">
-                   <h4 class="mdl-card__title-text"></h4>
+                   <h4><%- wines[i].type %></h4>
+                   <h4><%- wines[i].price %></h4>
                </div>
            </div>
            <!-- Price and Cart Card-->
