--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" type="image/x-icon" href="../../imgs/favicon.ico"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-green.min.css" />
 <link rel="stylesheet" href="styles/style.css">
