added headers to the pages
Just need to add the functionality for each of the pages to only show that message if there are no items in the list.

--- a/views/partials/favorites.ejs
+++ b/views/partials/favorites.ejs
@@ -1,3 +1,6 @@
+<div class="centered">
+    <h1 class="searcher">Create a favorites list!</h1>
+</div>
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
   <!-- Image Card-->
