--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -41,7 +41,7 @@
     </div>
 
     <div class = "mdl-tabs__panel" id = "dialogs">
-        <% include ../partials/dialog %>
+        <% include ../partials/modal %>
     </div>
 </body>
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
