--- a/views/partials/modal.ejs
+++ b/views/partials/modal.ejs
@@ -1,12 +1,7 @@
-<dialog class="mdl-dialog">
-  <h4 class="mdl-dialog__title">Allow data collection?</h4>
-  <div class="mdl-dialog__content">
-    <p>
-      Allowing us to collect data will let us get you the information you want faster.
-    </p>
+<dialog class="mdl-dialog" style="width: 500px">
+  <div class="mdl-dialog__content" style="padding-top: 0px">
   </div>
   <div class="mdl-dialog__actions">
-    <button type="button" class="mdl-button">Agree</button>
-    <button type="button" class="mdl-button close">Disagree</button>
+    <button type="button" onclick="closeModal()" class="mdl-button">Close</button>
   </div>
 </dialog>
