--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -39,10 +39,9 @@
             </div>
         </main>
     </div>
-
-    <div class = "mdl-tabs__panel" id = "dialogs">
-        <% include ../partials/modal %>
+    <div id="modalHolder">
     </div>
+
 </body>
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
