--- a/views/partials/modal.ejs
+++ b/views/partials/modal.ejs
@@ -1,7 +1,12 @@
+
+<% for(var i=0; i < wine.length; i++) { %>
 <dialog class="mdl-dialog" style="width: 500px">
   <div class="mdl-dialog__content" style="padding-top: 0px">
+      <h1><%- wine[i].name %></h1>
+      <h1><%- wine[i].price %></h1>
   </div>
   <div class="mdl-dialog__actions">
     <button type="button" onclick="closeModal()" class="mdl-button">Close</button>
   </div>
 </dialog>
+<% } %>
