No results says no results

--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -10,7 +10,7 @@
 
     <% } else{ %>
      <% for(var i=0; i < wines.length; i++) { %>
-         <div class="mdl-grid">
+         <div class="mdl-grid result">
            <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
            <!-- Image Card-->
            <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--8dp">
