--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -33,7 +33,7 @@
                    <button name='<%- wines[i].code %>' type="submit" onclick="openModal(this.name)" class="mdl-button mdl-js-button ">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
                    <button name="<%- wines[i].code %>" type="submit" onclick="addToList(this.name, 'wish')" class="mdl-button mdl-js-button ">Add to Wish List   <i class="material-icons mdl-color-text--green-800">card_giftcard</i></button>
                    <button name="<%- wines[i].code %>" type="submit" onclick="addToList(this.name, 'inventory')" class="mdl-button mdl-js-button ">Add to inventory   <i class="material-icons mdl-color-text--green-800">playlist_add</i></button>
-                   <button name="<%- wines[i].code %>" type="submit" class="mdl-button mdl-js-button ">Add to favorites   <i class="material-icons mdl-color-text--green-800">stars</i></button>
+                   <button name="<%- wines[i].code %>" type="submit" onclick="addToFavorites(this.name)" class="mdl-button mdl-js-button ">Add to favorites   <i class="material-icons mdl-color-text--green-800">stars</i></button>
                </div>
            </div>
          </div>
