--- a/views/partials/list.ejs
+++ b/views/partials/list.ejs
@@ -26,7 +26,7 @@
            <div class="mdl-card__actions">
                <h4>Quantity: </h4>
                <button name='<%- wines[i].wineApiCode %>' type="submit" class="mdl-button mdl-js-button" onclick="openModal(this.name)" data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
-               <button name='<%- wines[i].wineApiCode %>' type="submit" class="mdl-button mdl-js-button" onclick="removeFromList(this.name,<%- listType %>)">Remove   <i class="material-icons mdl-color-text--red-800">delete</i></button>
+               <button name='<%- wines[i].wineApiCode %>' type="submit" class="mdl-button mdl-js-button" onclick="removeFromList(this.name,'<%- listType %>')">Remove   <i class="material-icons mdl-color-text--red-800">delete</i></button>
            </div>
        </div>
      </div>
