Changed what appears with the more info modal popup and added some styles for them

--- a/views/partials/modal.ejs
+++ b/views/partials/modal.ejs
@@ -2,8 +2,12 @@
 <% for(var i=0; i < wine.length; i++) { %>
 <dialog class="mdl-dialog" style="width: 500px">
   <div class="mdl-dialog__content" style="padding-top: 0px">
-      <h1><%- wine[i].name %></h1>
-      <h1><%- wine[i].price %></h1>
+      <p class="modalp"><span class="modalspan">Name: </span><%- wine[i].name %></p>
+      <p class="modalp"><span class="modalspan">Winery: </span><%- wine[i].winery %></p>
+      <p class="modalp"><span class="modalspan">Region: </span><%- wine[i].region %></p>
+      <p class="modalp"><span class="modalspan">Vintage: </span><%- wine[i].vintage %></p>
+      <p class="modalp"><span class="modalspan">Varietal: </span><%- wine[i].varietal %></p>
+      
   </div>
   <div class="mdl-dialog__actions">
     <button type="button" onclick="closeModal()" class="mdl-button">Close</button>
