--- a/styles/style.css
+++ b/styles/style.css
@@ -16,3 +16,16 @@
 .searcher{
     color: rgb(156,39,176);
 }
+
+.modalp{
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+
+}
+
+.modalspan{
+    color: rgb(156,39,176);
+    font-weight: bold;
+    text-align: left;
+    font-size: 24px;
+}
