--- a/views/partials/list.ejs
+++ b/views/partials/list.ejs
@@ -1,6 +1,6 @@
 <% if(!locals.wines){ %>
     <div class="centered">
-        <h1 class="searcher">Add wines to your List by searching</h1>
+        <h1 class="searcher">You have no items in this list!</h1>
     </div>
 <% } else{ %>
  <% for(var i=0; i < wines.length; i++) { %>
@@ -25,6 +25,7 @@
        <div class="mdl-cell mdl-card mdl-cell--2-col mdl-cell--2-col-tablet mdl-shadow--2dp">
            <div class="mdl-card__actions">
                <h4>Quantity: </h4>
+               
                <button name='<%- wines[i].wineApiCode %>' type="submit" class="mdl-button mdl-js-button" onclick="openModal(this.name)" data-upgraded=",MaterialButton">More Info   <i class="material-icons mdl-color-text--green-800">info</i></button>
                <button name='<%- wines[i].wineApiCode %>' type="submit" class="mdl-button mdl-js-button" onclick="removeFromList(this.name,'<%- listType %>')">Remove   <i class="material-icons mdl-color-text--red-800">delete</i></button>
            </div>
