--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,8 +1,7 @@
 <div class="centered">
     <h1 class="searcher">Search for a wine</h1>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input type="search" onsearch="search(this)" id="searchBar" class="mdl-textfield__input darker" type="text">
-            <label class="mdl-textfield__label darker" for="searchBar">Begin your search here. . .</label>
+            <input type="search" onsearch="search(this)" id="searchBar" class="mdl-textfield__input darker" type="text" placeholder="Begin Your Search Here. . . ">
         </div>
 </div>
 
