--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -22,7 +22,7 @@
                    <div class="mdl-layout-spacer"></div>
                </div>
                <div class="mdl-card__supporting-text no-top-padding">
-                   <p class="cardp">$<%- wines[i].price %></p>
+                   <p class="cardp">Price: $<%- wines[i].price %></p>
                </div>
            </div>
            <!-- Price and Cart Card-->
