--- a/views/partials/favorites.ejs
+++ b/views/partials/favorites.ejs
@@ -13,12 +13,11 @@
            <!-- Info Card-->
            <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-shadow--8dp">
                <div class="mdl-card__title no-bottom-padding">
-                   <h2 class="mdl-card__title-text"><%- wines[i].name %></h2>
+                   <h2 class="mdl-card__title-text winename"><%- wines[i].name %></h2>
                    <div class="mdl-layout-spacer"></div>
                </div>
                <div class="mdl-card__supporting-text no-top-padding">
-                   <h4><%- wines[i].type %></h4>
-                   <h4><%- wines[i].price %></h4>
+                   <p class="cardp">Price: $<%- wines[i].price %></p>
                </div>
            </div>
            <!-- Price and Cart Card-->
