--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,4 +2,4 @@
 <a href="#favorites" onclick="makeFavorites()" class="mdl-tabs__tab">Favorites</a>
 <a href="#wishList" onclick="makeList('wish')" class="mdl-tabs__tab">Wish List</a>
 <a href="#inventory" onclick="makeList('inventory')" class="mdl-tabs__tab">Inventory</a>
-<a href="#customWine" onclick="makeCustomWine()" class="mdl-tabs__tab">Custom Wine</a>
+<a href="#customWine" class="mdl-tabs__tab">Custom Wine</a>
